# mean-field-dipolar

./: Cargo.toml  README.md  sim.toml
benches/: sim_benchmark.rs
src/: dipolar.rs  lattice.rs  lib.rs  main.rs  patterns.rs  result.rs  util.rs
