[package]
name = "mean-field-dipolar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "*", features=["serde-serialize"]}
approx = "*"
serde_json = "1.0"
serde = "1.0"
toml = "0.4.2"
clap = {version = "4.0.0", features=["derive"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sim_benchmark"
harness = false